# Psy-legis-monitor

./: .gitignore  requirements.txt  streamlit_app.py
psy-legis-monitor/: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  desktop_start_psy_legis.cmd  desktop_stop_psy_legis.cmd  docker-compose.yml  launch_dashboard.cmd  pyproject.toml  stop_dashboard.cmd
psy-legis-monitor/alembic/: env.py
psy-legis-monitor/alembic/versions/: 0001_initial.py
psy-legis-monitor/app/: __init__.py  main.py
psy-legis-monitor/app/cli/: commands.py
psy-legis-monitor/app/config/: __init__.py  keywords.yml  settings.py  sources.yml  taxonomy.yml
psy-legis-monitor/app/connectors/: __init__.py  agenas.py  base.py  camera.py  camera_snapshot.py  configured_pages.py  eurlex.py  gazzetta.py  http_fetch.py  ministero_salute.py  mock.py  normattiva.py  page.py  parsing.py  rss.py  senato.py  sparql.py  trovanorme_salute.py
psy-legis-monitor/app/core/: __init__.py  change_detection.py  classification.py  database.py  hashing.py  models.py  schemas.py  scoring.py  taxonomy.py  (+1 more)
psy-legis-monitor/data/: camera_snapshot.json
psy-legis-monitor/docs/: architecture.md  data_model.md  roadmap.md  sources.md
psy-legis-monitor/tests/: test_camera_snapshot.py  test_change_detection.py  test_classification.py  test_document_view.py  test_gazzetta_connector.py  test_hashing.py  test_page_connector.py  test_priority_connectors.py  test_reports.py  test_rss_connector.py  test_schemas.py  test_scoring.py  test_trovanorme_salute_connector.py  test_veneto_connector.py
(+10 files in other folders)
